--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-sanitize": "~1.3.4",
     "angular-resource": "~1.3.4",
     "angular-ui-router": "~0.2.13",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "flexslider": "~2.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
