--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "angular-resource": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "angular": "~1.3.4",
-    "flexslider": "~2.5.0"
+    "slick.js": "~1.5.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
