--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-resource": "~1.3.4",
     "angular-ui-router": "~0.2.13",
     "angular": "~1.3.4",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "fontawesome": "~4.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
